<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="256dp"
        android:fitsSystemWindows="true">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/mCollapsingToolbarLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:collapsedTitleTextAppearance="@color/colorTabText"
            app:expandedTitleMarginStart="10dp"
            app:expandedTitleTextAppearance="@color/colorTabTextSecond"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:title="For Your Smile">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

                <android.support.v7.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="@dimen/iconCardCornerRadius"
                    app:elevation="5dp">
                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:src="@drawable/icon"
                        />
                </android.support.v7.widget.CardView>

                <TextView
                    android:id="@+id/mVersionTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/colorTabTextSecond" />


            </LinearLayout>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:navigationIcon="@drawable/titlebar_back" />
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="15dp"
                app:cardCornerRadius="1dp"
                app:cardElevation="0.5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:paddingBottom="0dp"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:paddingTop="16dp"
                        android:text="@string/about_app"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:textColor="@color/colorPrimaryTextSecond"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="10dp"
                        android:paddingLeft="20dp"
                        android:paddingTop="5dp"
                        android:text="@string/about_app_text"
                        android:textSize="14sp"
                        android:textColor="@color/colorPrimaryTextSecond"
                        />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="15dp"
                app:cardCornerRadius="1dp"
                app:cardElevation="0.5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:paddingBottom="0dp"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:paddingTop="16dp"
                        android:text="@string/sourceCode"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:textColor="@color/colorPrimaryTextSecond"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="10dp"
                        android:paddingLeft="20dp"
                        android:paddingTop="10dp"
                        android:text="@string/sourceCodeUrl"
                        android:autoLink="web"
                        android:textSize="14sp"
                        android:textColorLink="@color/colorPrimary"
                        android:textColor="@color/colorPrimaryTextSecond"
                        />
                </LinearLayout>

            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="15dp"
                app:cardCornerRadius="1dp"
                app:cardElevation="0.5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:paddingBottom="0dp"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:paddingTop="16dp"
                        android:text="@string/appIntroduce"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:textColor="@color/colorPrimaryTextSecond"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="10dp"
                        android:paddingLeft="20dp"
                        android:paddingTop="10dp"
                        android:text="@string/appIntroduceUrl"
                        android:autoLink="web"
                        android:textSize="14sp"
                        android:textColorLink="@color/colorPrimary"
                        android:textColor="@color/colorPrimaryTextSecond"
                        />
                </LinearLayout>

            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="15dp"
                app:cardCornerRadius="1dp"
                app:cardElevation="0.5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:paddingBottom="0dp"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:paddingTop="16dp"
                        android:text="@string/about_author"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:textColor="@color/colorPrimaryTextSecond"
                        />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingBottom="10dp"
                            android:paddingLeft="20dp"
                            android:paddingTop="10dp"
                            android:textSize="14sp"
                            android:text="blog: "
                            android:textColor="@color/colorPrimaryTextSecond"
                            />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingBottom="10dp"
                            android:paddingLeft="5dp"
                            android:paddingTop="10dp"
                            android:textSize="14sp"
                            android:text="@string/blogUrl"
                            android:autoLink="web"
                            android:textColorLink="@color/colorPrimary"
                            android:textColor="@color/colorPrimaryTextSecond"
                            />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingBottom="10dp"
                            android:paddingLeft="20dp"
                            android:paddingTop="5dp"
                            android:textSize="14sp"
                            android:text="github: "
                            android:textColor="@color/colorPrimaryTextSecond"
                            />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingBottom="10dp"
                            android:paddingLeft="5dp"
                            android:paddingTop="5dp"
                            android:textSize="14sp"
                            android:text="@string/githubUrl"
                            android:autoLink="web"
                            android:textColorLink="@color/colorPrimary"
                            android:textColor="@color/colorPrimaryTextSecond"
                            />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingBottom="10dp"
                            android:paddingLeft="20dp"
                            android:paddingTop="5dp"
                            android:textSize="14sp"
                            android:text="email: "
                            android:textColor="@color/colorPrimaryTextSecond"
                            />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingBottom="10dp"
                            android:paddingLeft="5dp"
                            android:paddingTop="5dp"
                            android:textSize="14sp"
                            android:text="@string/email"
                            android:autoLink="email"
                            android:textColorLink="@color/colorPrimary"
                            android:textColor="@color/colorPrimaryTextSecond"
                            />
                    </LinearLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="15dp"
                app:cardCornerRadius="1dp"
                app:cardElevation="0.5dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:paddingBottom="0dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:paddingTop="16dp"
                    android:text="about library"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimaryTextSecond"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="10dp"
                    android:paddingLeft="20dp"
                    android:paddingTop="5dp"
                    android:text="@string/about_library"
                    android:textSize="14sp"
                    android:textColor="@color/colorPrimaryTextSecond"
                    />
            </LinearLayout>

        </android.support.v7.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="200dp" />

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>